# BandPrepare

./: .gitignore  ARCHITECTURE.md  DEV_PROMPT.md  PORTABLE-GUI-ROADMAP.md  README.md  bandprepare.spec  pyproject.toml
.github/workflows/: build.yml
assets/: icon.icns
docs/: CLI.md  DEVELOPMENT.md  GUI.md  REFERENCE.md
packaging/: bandprepare_cli.py  bandprepare_gui.py  make_icons.py
src/bandprepare/: __init__.py  __main__.py  _frozen_mp.py  _frozen_streams.py  _ssl_certs.py  audio.py  cli.py  click.py  device.py  errors.py  logging_utils.py  pipeline.py  youtube.py
src/bandprepare/gui/: __init__.py  __main__.py  app.py  worker.py
src/bandprepare/separation/: __init__.py  base.py  download.py  drums.py  drumsep.py  mdx23c.py  registry.py  roformer.py  stems.py
tests/: make_sample.py  test_click.py  test_mel_filter.py  test_unit.py  test_youtube.py
