[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bandprepare"
version = "0.1.0"
description = "Split a song into per-instrument practice tracks, with detailed drum-kit separation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "BandPrepare" }]
keywords = ["audio", "source-separation", "demucs", "drums", "stems", "music"]

# torch/torchaudio are capped at <2.3 because 2.2.2 is the last release with
# Intel-macOS (x86_64) wheels; the pinned range also resolves cleanly on Linux
# and Apple Silicon. numpy is held <2 to match the torch 2.2 ABI.
dependencies = [
    "torch>=2.1.0,<2.3.0",
    "torchaudio>=2.1.0,<2.3.0",
    "demucs==4.0.1",
    "soundfile>=0.12",
    "numpy<2",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "gdown>=5.1",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
bandprepare = "bandprepare.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bandprepare"]

[tool.pytest.ini_options]
testpaths = ["tests"]
