[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bandprepare"
version = "0.3.0"
description = "Split a song into per-instrument practice tracks, with detailed drum-kit separation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "BandPrepare" }]
keywords = ["audio", "source-separation", "demucs", "drums", "stems", "music"]

# torch/torchaudio are capped at <2.3 because 2.2.2 is the last release with
# Intel-macOS (x86_64) wheels; the pinned range also resolves cleanly on Linux
# and Apple Silicon. numpy is held <2 to match the torch 2.2 ABI.
dependencies = [
    "torch>=2.1.0,<2.3.0",
    "torchaudio>=2.1.0,<2.3.0",
    "demucs==4.0.1",
    "soundfile>=0.12",
    "numpy<2",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "gdown>=5.1",
    # Static ffmpeg bundled in the wheel (no system install / runtime download).
    # ffmpeg only (no ffprobe); the decode path in audio.py accounts for that.
    "imageio-ffmpeg>=0.5",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
# Desktop GUI (PySide6/Qt). Optional so the headless CLI install stays lean.
gui = ["PySide6>=6.5"]
# Packaging the portable one-folder bundle (see bandprepare.spec). Build-time only.
build = ["pyinstaller>=6.0"]
# RoFormer stem models (bs_roformer, mel_band_roformer). Kept optional so the
# base install stays lean and Intel-mac-safe. Mel-Band's only librosa use
# (filters.mel) is vendored as pure NumPy (vendor/roformer/_mel.py), so librosa/
# numba/llvmlite are no longer required (Phase 5b / D6) — which also keeps the
# portable bundle off the awkward-to-freeze numba JIT stack.
roformer = [
    "rotary-embedding-torch>=0.3.6",
    "beartype>=0.18",
    "einops>=0.8",
]

[project.scripts]
bandprepare = "bandprepare.cli:main"
bandprepare-gui = "bandprepare.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bandprepare"]

[tool.pytest.ini_options]
testpaths = ["tests"]
